--- a/assets/package.json
+++ b/assets/package.json
@@ -3,13 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "get-canvas-context": "^1.0.2",
+    "phoenix": "file:deps/phoenix",
+    "phoenix_html": "file:deps/phoenix_html",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.4.0-alpha.0",
     "react-scripts": "1.1.4",
     "redux": "^4.0.0",
-    "redux-promise": "^0.6.0"
+    "redux-promise": "^0.6.0",
+    "svg-to-image": "^1.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
